force-app/main/default/objects/Activity/fields/Accountant_Portal_ID__c.field-meta.xml
<CustomField>
    <fullName>Accountant_Portal_ID__c</fullName>
    <label>Accountant Portal ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>