force-app/main/default/objects/Activity/fields/ANI__c.field-meta.xml
<CustomField>
    <fullName>ANI__c</fullName>
    <description>Automatic Number Identification for logged phone calls</description>
    <label>ANI</label>
    <type>Phone</type>
</CustomField>