force-app/main/default/objects/Activity/fields/APIType__c.field-meta.xml
<CustomField>
    <fullName>APIType__c</fullName>
    <label>APIType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>