force-app/main/default/objects/Activity/fields/Appointment_Block_Text__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Block_Text__c</fullName>
    <formula>LEFT(TEXT(Appt_Block__c),5)</formula>
    <label>Appointment Block (Text)</label>
    <type>Text</type>
</CustomField>