force-app/main/default/objects/Activity/fields/Appointment_Disposition__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Disposition__c</fullName>
    <label>Disposition</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type_of_Appointment__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Consulted</fullName>
            </value>
            <value>
                <fullName>No Show</fullName>
            </value>
            <value>
                <fullName>Rescheduled</fullName>
            </value>
            <value>
                <fullName>Live Transfer</fullName>
            </value>
            <value>
                <fullName>Appointment Scheduled</fullName>
            </value>
            <value>
                <fullName>Follow-Up</fullName>
            </value>
            <value>
                <fullName>Do Not Call</fullName>
            </value>
            <value>
                <fullName>No Answer</fullName>
            </value>
            <value>
                <fullName>Connected</fullName>
            </value>
            <value>
                <fullName>Bad Number</fullName>
                <label>Bad number</label>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Contacted</fullName>
            </value>
            <value>
                <fullName>CB Consulted</fullName>
            </value>
            <value>
                <fullName>Scheduled</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Failure to Call</fullName>
            </value>
            <value>
                <fullName>Not Qualified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>