force-app/main/default/objects/Activity/fields/Appointment_Setter__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Setter__c</fullName>
    <description>The Username who set the appointment</description>
    <inlineHelpText>This is the User who created the appointment</inlineHelpText>
    <label>Appointment Setter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>