force-app/main/default/objects/Activity/fields/Appointment_Setter_Role__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Setter_Role__c</fullName>
    <description>The role of the user that set the appointment</description>
    <label>Appointment Setter Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>BNA Team</fullName>
            </value>
            <value>
                <fullName>Brian&apos;s Team</fullName>
            </value>
            <value>
                <fullName>Floria&apos;s Team</fullName>
            </value>
            <value>
                <fullName>Inbound Support Rep</fullName>
            </value>
            <value>
                <fullName>Israel&apos;s Team</fullName>
            </value>
            <value>
                <fullName>JT&apos;s Team</fullName>
            </value>
            <value>
                <fullName>Marzi&apos;s Team</fullName>
            </value>
            <value>
                <fullName>Michele&apos;s Team</fullName>
            </value>
            <value>
                <fullName>Nesting Team</fullName>
            </value>
            <value>
                <fullName>Sample&apos;s Team</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>