force-app/main/default/objects/Activity/fields/Appt_Block__c.field-meta.xml
<CustomField>
    <fullName>Appt_Block__c</fullName>
    <label>Appt Block</label>
    <type>Time</type>
</CustomField>