force-app/main/default/objects/Activity/fields/Appt_Time__c.field-meta.xml
<CustomField>
    <fullName>Appt_Time__c</fullName>
    <formula>ActivityDateTime</formula>
    <label>Appt Time</label>
    <type>DateTime</type>
</CustomField>