force-app/main/default/objects/Activity/fields/Assigned_Sales_Team__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Sales_Team__c</fullName>
    <formula>TEXT(Owner:User.Sales_Team__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assigned Sales Team</label>
    <type>Text</type>
</CustomField>