force-app/main/default/objects/Activity/fields/Assigned_To_Role__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To_Role__c</fullName>
    <description>The type of user that the activity is assigned to</description>
    <label>Assigned To Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Billing</fullName>
            </value>
            <value>
                <fullName>Collections</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Retention</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>SDR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>