force-app/main/default/objects/Activity/fields/bat__Due_Date_Change_Count__c.field-meta.xml
<CustomField>
    <fullName>bat__Due_Date_Change_Count__c</fullName>
    <label>Due Date Change Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>