force-app/main/default/objects/Activity/fields/Call_Result_Task__c.field-meta.xml
<CustomField>
    <fullName>Call_Result_Task__c</fullName>
    <label>Call Result</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No Answer</fullName>
            </value>
            <value>
                <fullName>Do Not Call</fullName>
            </value>
            <value>
                <fullName>Consultation</fullName>
            </value>
            <value>
                <fullName>TSA Appointment Scheduled</fullName>
            </value>
            <value>
                <fullName>Call Back Set</fullName>
            </value>
            <value>
                <fullName>Not Interested in TSA Appointment</fullName>
            </value>
            <value>
                <fullName>Live Transfer</fullName>
            </value>
            <value>
                <fullName>Left Voicemail</fullName>
            </value>
            <value>
                <fullName>Bad Number</fullName>
            </value>
            <value>
                <fullName>Not a Sales Opportunity</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>