force-app/main/default/objects/Activity/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <description>The Campaign value of the activity&apos;s related Lead or Account</description>
    <inlineHelpText>The Campaign value of the activity&apos;s related Lead or Account</inlineHelpText>
    <label>Campaign</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Join Now</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>