force-app/main/default/objects/Activity/fields/Created_Hour__c.field-meta.xml
<CustomField>
    <fullName>Created_Hour__c</fullName>
    <formula>VALUE( MID( TEXT( Created_Date_Time__c-5/24 ), 12, 2) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created Hour</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>