force-app/main/default/objects/Activity/fields/Distribute_Date__c.field-meta.xml
<CustomField>
    <fullName>Distribute_Date__c</fullName>
    <inlineHelpText>This comes from the Lead or Account associated</inlineHelpText>
    <label>Distribute Date</label>
    <type>Date</type>
</CustomField>