force-app/main/default/objects/Activity/fields/DNIS__c.field-meta.xml
<CustomField>
    <fullName>DNIS__c</fullName>
    <description>The Dialed Number Identification Service number for logged phone calls</description>
    <label>DNIS</label>
    <type>Phone</type>
</CustomField>