force-app/main/default/objects/Activity/fields/EntityID__c.field-meta.xml
<CustomField>
    <fullName>EntityID__c</fullName>
    <label>EntityID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>