force-app/main/default/objects/Activity/fields/Event_Cancel_Date__c.field-meta.xml
<CustomField>
    <fullName>Event_Cancel_Date__c</fullName>
    <label>Event Cancel Date</label>
    <type>DateTime</type>
</CustomField>