force-app/main/default/objects/Activity/fields/Event_History__c.field-meta.xml
<CustomField>
    <fullName>Event_History__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Event History</label>
    <referenceTo>Event_History__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>