force-app/main/default/objects/Activity/fields/Event_Status__c.field-meta.xml
<CustomField>
    <fullName>Event_Status__c</fullName>
    <description>Allows users to quickly see what happened during the event and organize their calendar.</description>
    <label>Event Status</label>
    <length>75</length>
    <type>Text</type>
</CustomField>