force-app/main/default/objects/Activity/fields/Expected_Applied_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Expected_Applied_Revenue__c</fullName>
    <description>The expected applied revenue calculated based on the historical show rate and close rate of the TSA’s lead source.  This expected applied revenue counts for any TSA that is NOT dispositioned ‘Rescheduled’, ‘Canceled’, or ‘Consulted-Rescheduled’</description>
    <label>Expected Applied Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>