force-app/main/default/objects/Activity/fields/External_Email_ID__c.field-meta.xml
<CustomField>
    <fullName>External_Email_ID__c</fullName>
    <externalId>true</externalId>
    <label>External Email ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>