force-app/main/default/objects/Activity/fields/GroupPlanClientName__c.field-meta.xml
<CustomField>
    <fullName>GroupPlanClientName__c</fullName>
    <label>GroupPlanClientName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>