force-app/main/default/objects/Activity/fields/Inc_Date__c.field-meta.xml
<CustomField>
    <fullName>Inc_Date__c</fullName>
    <label>Inc Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>