force-app/main/default/objects/Activity/fields/Initial_Rejected_By__c.field-meta.xml
<CustomField>
    <fullName>Initial_Rejected_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The user that initially rejected the appointment</description>
    <label>Initial Rejected By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>