force-app/main/default/objects/Activity/fields/Initial_Rejected_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Initial_Rejected_Date_Time__c</fullName>
    <description>The date and time that the appointment was initially rejected</description>
    <label>Initial Rejected Date/Time</label>
    <type>DateTime</type>
</CustomField>