force-app/main/default/objects/Activity/fields/Initial_Rejected_Reason__c.field-meta.xml
<CustomField>
    <fullName>Initial_Rejected_Reason__c</fullName>
    <label>Initial Rejected Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prior Appointment Running Long</fullName>
            </value>
            <value>
                <fullName>On Break</fullName>
            </value>
            <value>
                <fullName>Out of Office</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>