force-app/main/default/objects/Activity/fields/INVOCA_FOR_SF__Invoca_Call_Log__c.field-meta.xml
<CustomField>
    <fullName>INVOCA_FOR_SF__Invoca_Call_Log__c</fullName>
    <label>Invoca Call Log</label>
    <length>18</length>
    <type>Text</type>
</CustomField>