force-app/main/default/objects/Activity/fields/Last_Assigned_to__c.field-meta.xml
<CustomField>
    <fullName>Last_Assigned_to__c</fullName>
    <label>Last Assigned to</label>
    <length>255</length>
    <type>Text</type>
</CustomField>