force-app/main/default/objects/Activity/fields/Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source__c</fullName>
    <label>Lead Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1-800Accountant</fullName>
            </value>
            <value>
                <fullName>Agents &amp; Corporations</fullName>
            </value>
            <value>
                <fullName>All Florida Business Solutions</fullName>
            </value>
            <value>
                <fullName>Bark</fullName>
            </value>
            <value>
                <fullName>Betterfin</fullName>
            </value>
            <value>
                <fullName>Better Legal</fullName>
            </value>
            <value>
                <fullName>BizCounsel</fullName>
            </value>
            <value>
                <fullName>BizFilings</fullName>
            </value>
            <value>
                <fullName>BK Search</fullName>
            </value>
            <value>
                <fullName>BPAS</fullName>
            </value>
            <value>
                <fullName>Building Trades</fullName>
            </value>
            <value>
                <fullName>Business Licenses</fullName>
            </value>
            <value>
                <fullName>Business Talent Group</fullName>
            </value>
            <value>
                <fullName>ChaliceNetwork</fullName>
            </value>
            <value>
                <fullName>Clearbanc</fullName>
            </value>
            <value>
                <fullName>ClientBooks</fullName>
            </value>
            <value>
                <fullName>Community Tax</fullName>
            </value>
            <value>
                <fullName>Company.com</fullName>
            </value>
            <value>
                <fullName>Corp Offer</fullName>
            </value>
            <value>
                <fullName>Coverwallet</fullName>
            </value>
            <value>
                <fullName>CPAdirectory</fullName>
            </value>
            <value>
                <fullName>Data Partners</fullName>
            </value>
            <value>
                <fullName>Direct Inc.</fullName>
            </value>
            <value>
                <fullName>Dun &amp; Bradstreet</fullName>
            </value>
            <value>
                <fullName>EIG</fullName>
            </value>
            <value>
                <fullName>EIN Tax Filing</fullName>
            </value>
            <value>
                <fullName>Endurance International Group</fullName>
            </value>
            <value>
                <fullName>Everlance</fullName>
            </value>
            <value>
                <fullName>EZCorp</fullName>
            </value>
            <value>
                <fullName>FileNow</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>