force-app/main/default/objects/Activity/fields/Lead_Type_New__c.field-meta.xml
<CustomField>
    <fullName>Lead_Type_New__c</fullName>
    <description>The Lead Type New value from the activity&apos;s related Lead or Account</description>
    <inlineHelpText>The Lead Type New value from the activity&apos;s related Lead or Account</inlineHelpText>
    <label>Lead Type New</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Buyer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>