force-app/main/default/objects/Activity/fields/LZ_Appointment_Type__c.field-meta.xml
<CustomField>
    <fullName>LZ_Appointment_Type__c</fullName>
    <label>LZ Appointment Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>