force-app/main/default/objects/Activity/fields/LZ_LP_Response_ID__c.field-meta.xml
<CustomField>
    <fullName>LZ_LP_Response_ID__c</fullName>
    <label>LZ LP Response ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>