force-app/main/default/objects/Activity/fields/Minute_Difference_for_Appt_Call__c.field-meta.xml
<CustomField>
    <fullName>Minute_Difference_for_Appt_Call__c</fullName>
    <label>Minute Difference for Appt Call</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>