force-app/main/default/objects/Activity/fields/Net_Status__c.field-meta.xml
<CustomField>
    <fullName>Net_Status__c</fullName>
    <label>Net Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>