force-app/main/default/objects/Activity/fields/NVMConnect__SalesCadenceActivityOutcome__c.field-meta.xml
<CustomField>
    <fullName>NVMConnect__SalesCadenceActivityOutcome__c</fullName>
    <label>Activity Outcome</label>
    <length>255</length>
    <type>Text</type>
</CustomField>