force-app/main/default/objects/Activity/fields/NVMConnect__SalesCadenceActivityOutcomeNotes__c.field-meta.xml
<CustomField>
    <fullName>NVMConnect__SalesCadenceActivityOutcomeNotes__c</fullName>
    <label>Activity Outcome Notes</label>
    <type>TextArea</type>
</CustomField>