force-app/main/default/objects/Activity/fields/NVMConnect__SalesCadenceName__c.field-meta.xml
<CustomField>
    <fullName>NVMConnect__SalesCadenceName__c</fullName>
    <label>Cadence Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>