force-app/main/default/objects/Activity/fields/NVMConnect__SalesCadenceProspectListName__c.field-meta.xml
<CustomField>
    <fullName>NVMConnect__SalesCadenceProspectListName__c</fullName>
    <label>Prospect List Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>