force-app/main/default/objects/Activity/fields/NVMConnect__SalesCadenceStepName__c.field-meta.xml
<CustomField>
    <fullName>NVMConnect__SalesCadenceStepName__c</fullName>
    <label>Step Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>