force-app/main/default/objects/Activity/fields/NVMConnect__SalesCadenceStepNumber__c.field-meta.xml
<CustomField>
    <fullName>NVMConnect__SalesCadenceStepNumber__c</fullName>
    <label>Step Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>