force-app/main/default/objects/Activity/fields/NVMContactWorld__CallRingTimeInSeconds__c.field-meta.xml
<CustomField>
    <fullName>NVMContactWorld__CallRingTimeInSeconds__c</fullName>
    <inlineHelpText>For Inbound, this is the time between the agent&apos;s phone ringing and the agent answering the call. For Outbound, this is the time between the customer&apos;s phone ringing and the customer answering the call. This value is rounded to the nearest second.</inlineHelpText>
    <label>Call Ring Time (s)</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>