force-app/main/default/objects/Activity/fields/Original_Assigned_Owner__c.field-meta.xml
<CustomField>
    <fullName>Original_Assigned_Owner__c</fullName>
    <description>The user originally assigned as owner of the task/event</description>
    <label>Original Assigned Owner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>