force-app/main/default/objects/Activity/fields/Original_Assigned_to__c.field-meta.xml
<CustomField>
    <fullName>Original_Assigned_to__c</fullName>
    <label>Original Assigned to</label>
    <length>255</length>
    <type>Text</type>
</CustomField>