force-app/main/default/objects/Activity/fields/Other_Tracking__c.field-meta.xml
<CustomField>
    <fullName>Other_Tracking__c</fullName>
    <label>Other Tracking</label>
    <length>255</length>
    <type>Text</type>
</CustomField>