force-app/main/default/objects/Activity/fields/Paid_Lead__c.field-meta.xml
<CustomField>
    <fullName>Paid_Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Paid Lead</label>
    <type>Checkbox</type>
</CustomField>