force-app/main/default/objects/Activity/fields/Performance_Tracking_ID__c.field-meta.xml
<CustomField>
    <fullName>Performance_Tracking_ID__c</fullName>
    <description>The method in which the appointment was set</description>
    <inlineHelpText>The method in which the appointment was set</inlineHelpText>
    <label>Performance Tracking ID</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Company-Assigned</fullName>
            </value>
            <value>
                <fullName>Company-Rescheduled</fullName>
            </value>
            <value>
                <fullName>Self-Rescheduled</fullName>
            </value>
            <value>
                <fullName>Self-Set</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>