force-app/main/default/objects/Activity/fields/Portal_Event_Owner__c.field-meta.xml
<CustomField>
    <fullName>Portal_Event_Owner__c</fullName>
    <description>The name of the portal user that owns the event</description>
    <label>Portal Event Owner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>