force-app/main/default/objects/Activity/fields/Preferred_Phone__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Phone__c</fullName>
    <inlineHelpText>If a client provides a preferred number they would like to be reached at.</inlineHelpText>
    <label>Preferred Phone</label>
    <type>Phone</type>
</CustomField>