force-app/main/default/objects/Activity/fields/Prior_Owner__c.field-meta.xml
<CustomField>
    <fullName>Prior_Owner__c</fullName>
    <description>The name of the Prior Owner of the activity</description>
    <label>Prior Owner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>