force-app/main/default/objects/Activity/fields/Report_Description__c.field-meta.xml
<CustomField>
    <fullName>Report_Description__c</fullName>
    <label>Report Description</label>
    <type>TextArea</type>
</CustomField>