force-app/main/default/objects/Activity/fields/Rescheduled_Appointment__c.field-meta.xml
<CustomField>
    <fullName>Rescheduled_Appointment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rescheduled Appointment?</label>
    <type>Checkbox</type>
</CustomField>