force-app/main/default/objects/Activity/fields/Secondary_Disposition_Details__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Disposition_Details__c</fullName>
    <label>Secondary Disposition Details</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Appointment_Disposition__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Sale</fullName>
            </value>
            <value>
                <fullName>Not Interested</fullName>
            </value>
            <value>
                <fullName>Follow-Up</fullName>
            </value>
            <value>
                <fullName>Unavailable</fullName>
            </value>
            <value>
                <fullName>Bad Number</fullName>
            </value>
            <value>
                <fullName>Do Not Call</fullName>
            </value>
            <value>
                <fullName>Follow-Up Reschedule</fullName>
            </value>
            <value>
                <fullName>No Contact</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Accounting</fullName>
            </value>
            <value>
                <fullName>Billing</fullName>
            </value>
            <value>
                <fullName>Consultation</fullName>
            </value>
            <value>
                <fullName>BNA</fullName>
            </value>
            <value>
                <fullName>SDRs</fullName>
            </value>
            <value>
                <fullName>TSA Appointment</fullName>
            </value>
            <value>
                <fullName>Accounting Appointment</fullName>
            </value>
            <value>
                <fullName>TSA Appointment Scheduled</fullName>
            </value>
            <value>
                <fullName>Call Back Set</fullName>
            </value>
            <value>
                <fullName>Not Interested in TSA Appointment</fullName>
            </value>
            <value>
                <fullName>Secured Payment Method</fullName>
            </value>
            <value>
                <fullName>Live Transfer</fullName>
            </value>
            <value>
                <fullName>NI- Software</fullName>
            </value>
            <value>
                <fullName>NI- Bookkeeper</fullName>
            </value>
            <value>
                <fullName>NI-Not Enough Business</fullName>
            </value>
            <value>
                <fullName>NI- Other</fullName>
            </value>
            <value>
                <fullName>Left Voicemail</fullName>
            </value>
            <value>
                <fullName>Not a Sales Opportunity</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Rescheduled</fullName>
            </value>
            <value>
                <fullName>Timer Started</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>