force-app/main/default/objects/Activity/fields/SMS_Type__c.field-meta.xml
<CustomField>
    <fullName>SMS_Type__c</fullName>
    <label>SMS Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Advisory Reminder</fullName>
            </value>
            <value>
                <fullName>CB Invite</fullName>
            </value>
            <value>
                <fullName>CB No Show</fullName>
            </value>
            <value>
                <fullName>CB Reminder</fullName>
            </value>
            <value>
                <fullName>SDR No Answer</fullName>
            </value>
            <value>
                <fullName>TSA Invite</fullName>
            </value>
            <value>
                <fullName>TSA No Show</fullName>
            </value>
            <value>
                <fullName>TSA Reminder</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>