force-app/main/default/objects/Activity/fields/Time_Zone_Account__c.field-meta.xml
<CustomField>
    <fullName>Time_Zone_Account__c</fullName>
    <formula>Account__r.Time_Zone__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time Zone</label>
    <type>Text</type>
</CustomField>